Started on the A-to-B solver for GiRaFFE.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -299,9 +299,6 @@
     "&= -\\frac{\\gamma_{,l}}{2\\gamma} \\epsilon^{ijk} \\partial_j A_k + \\epsilon^{ijk} \\partial_l \\partial_j A_k \\\\\n",
     "&= \\frac{\\gamma_{,l}}{2\\gamma} B^i + \\epsilon^{ijk} A_{k,jl}, i \\neq l, \\\\\n",
     "\\end{align}\n",
-    "**Zach says: The last line is confusing. Can you please fill in the steps?**\n",
-    "\n",
-    "**Zach says: I think it would be easiest to just take finite difference derivatives of $\\alpha u^0$, $u^i$, and $u_j$ directly; i.e., precompute them as gridfunctions. Then we don't need to rely on so many other derivatives. Each derivative will add some small bit of numerical noise, so minimizing the total number of derivatives would be ideal. Thus the general rule would be: express $B^i$ and its derivatives in terms of $A_i$, and try to find combinations of other quantities to precompute as gridfunctions to minimize the total number of finite difference derivatives taken. I'm generally fine with taking derivatives of spacetime metric quantities expanded using the product rule, since defining them as gridfunctions would require a lot of gridfunctions, and these quantities are usually pretty smooth (and thus amenable to finite differencing).**\n",
     "\n",
     "First, we will handle the derivatives of the velocity $u^i$ and its lowered form."
    ]
@@ -511,7 +508,7 @@
     "where $\\epsilon_{ijk} = [ijk] \\sqrt{\\gamma}$ is the antisymmetric Levi-Civita tensor, the drift velocity $v^i = u^i/u^0$, and $\\gamma$ is the determinant of the three metric. \n",
     "The scalar electric potential $\\Phi$ is also evolved by eq. 19:\n",
     "$$\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi],$$\n",
-    "with $\\xi$ chosen as a damping factor. **Zach says: It might be useful to upwind the $\\partial_j \\beta^j$ term. I prefer the name $\\text{psi6Phi}$ for the evolution variable, as it's defined as $\\sqrt{\\gamma}\\Phi=\\psi^6 \\Phi$, where $\\psi$ is the conformal factor.**"
+    "with $\\xi$ chosen as a damping factor. "
    ]
   },
   {
@@ -576,78 +573,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.0*AD_dD12/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) + 1.0*AD_dD21/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\n",
-      "1.0*AD_dD02/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) - 1.0*AD_dD20/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\n",
-      "-1.0*AD_dD01/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) + 1.0*AD_dD10/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\n",
-      "{\n",
-      "    /* \n",
-      "     * Step 1 of 2: Read from main memory and compute finite difference stencils (if any):\n",
-      "     */\n",
-      "    /*\n",
-      "     *  Original SymPy expressions:\n",
-      "     *  \"[const double AD_dD20 = invdx0*(-2*AD2_i0m1_i1_i2/3 + AD2_i0m2_i1_i2/12 + 2*AD2_i0p1_i1_i2/3 - AD2_i0p2_i1_i2/12),\n",
-      "     *    const double AD_dD10 = invdx0*(-2*AD1_i0m1_i1_i2/3 + AD1_i0m2_i1_i2/12 + 2*AD1_i0p1_i1_i2/3 - AD1_i0p2_i1_i2/12),\n",
-      "     *    const double AD_dD01 = invdx1*(-2*AD0_i0_i1m1_i2/3 + AD0_i0_i1m2_i2/12 + 2*AD0_i0_i1p1_i2/3 - AD0_i0_i1p2_i2/12),\n",
-      "     *    const double AD_dD02 = invdx2*(-2*AD0_i0_i1_i2m1/3 + AD0_i0_i1_i2m2/12 + 2*AD0_i0_i1_i2p1/3 - AD0_i0_i1_i2p2/12)]\"\n",
-      "     */\n",
-      "    const double gammaDD00 = in_gfs[IDX4(GAMMADD00GF, i0,i1,i2)];\n",
-      "    const double gammaDD01 = in_gfs[IDX4(GAMMADD01GF, i0,i1,i2)];\n",
-      "    const double gammaDD02 = in_gfs[IDX4(GAMMADD02GF, i0,i1,i2)];\n",
-      "    const double gammaDD11 = in_gfs[IDX4(GAMMADD11GF, i0,i1,i2)];\n",
-      "    const double gammaDD12 = in_gfs[IDX4(GAMMADD12GF, i0,i1,i2)];\n",
-      "    const double gammaDD22 = in_gfs[IDX4(GAMMADD22GF, i0,i1,i2)];\n",
-      "    const double betaU1 = in_gfs[IDX4(BETAU1GF, i0,i1,i2)];\n",
-      "    const double betaU2 = in_gfs[IDX4(BETAU2GF, i0,i1,i2)];\n",
-      "    const double alpha = in_gfs[IDX4(ALPHAGF, i0,i1,i2)];\n",
-      "    const double ValenciavU1 = in_gfs[IDX4(VALENCIAVU1GF, i0,i1,i2)];\n",
-      "    const double ValenciavU2 = in_gfs[IDX4(VALENCIAVU2GF, i0,i1,i2)];\n",
-      "    const double AD0_i0_i1_i2m2 = in_gfs[IDX4(AD0GF, i0,i1,i2-2)];\n",
-      "    const double AD0_i0_i1_i2m1 = in_gfs[IDX4(AD0GF, i0,i1,i2-1)];\n",
-      "    const double AD0_i0_i1m2_i2 = in_gfs[IDX4(AD0GF, i0,i1-2,i2)];\n",
-      "    const double AD0_i0_i1m1_i2 = in_gfs[IDX4(AD0GF, i0,i1-1,i2)];\n",
-      "    const double AD0_i0_i1p1_i2 = in_gfs[IDX4(AD0GF, i0,i1+1,i2)];\n",
-      "    const double AD0_i0_i1p2_i2 = in_gfs[IDX4(AD0GF, i0,i1+2,i2)];\n",
-      "    const double AD0_i0_i1_i2p1 = in_gfs[IDX4(AD0GF, i0,i1,i2+1)];\n",
-      "    const double AD0_i0_i1_i2p2 = in_gfs[IDX4(AD0GF, i0,i1,i2+2)];\n",
-      "    const double AD1_i0m2_i1_i2 = in_gfs[IDX4(AD1GF, i0-2,i1,i2)];\n",
-      "    const double AD1_i0m1_i1_i2 = in_gfs[IDX4(AD1GF, i0-1,i1,i2)];\n",
-      "    const double AD1_i0p1_i1_i2 = in_gfs[IDX4(AD1GF, i0+1,i1,i2)];\n",
-      "    const double AD1_i0p2_i1_i2 = in_gfs[IDX4(AD1GF, i0+2,i1,i2)];\n",
-      "    const double AD2_i0m2_i1_i2 = in_gfs[IDX4(AD2GF, i0-2,i1,i2)];\n",
-      "    const double AD2_i0m1_i1_i2 = in_gfs[IDX4(AD2GF, i0-1,i1,i2)];\n",
-      "    const double AD2_i0p1_i1_i2 = in_gfs[IDX4(AD2GF, i0+1,i1,i2)];\n",
-      "    const double AD2_i0p2_i1_i2 = in_gfs[IDX4(AD2GF, i0+2,i1,i2)];\n",
-      "    const double AevolParen_dD0 = in_gfs[IDX4(AEVOLPAREN_DD0GF, i0,i1,i2)];\n",
-      "    const double AD_dD20 = invdx0*(-2.0/3.0*AD2_i0m1_i1_i2 + (1.0/12.0)*AD2_i0m2_i1_i2 + (2.0/3.0)*AD2_i0p1_i1_i2 - 1.0/12.0*AD2_i0p2_i1_i2);\n",
-      "    const double AD_dD10 = invdx0*(-2.0/3.0*AD1_i0m1_i1_i2 + (1.0/12.0)*AD1_i0m2_i1_i2 + (2.0/3.0)*AD1_i0p1_i1_i2 - 1.0/12.0*AD1_i0p2_i1_i2);\n",
-      "    const double AD_dD01 = invdx1*(-2.0/3.0*AD0_i0_i1m1_i2 + (1.0/12.0)*AD0_i0_i1m2_i2 + (2.0/3.0)*AD0_i0_i1p1_i2 - 1.0/12.0*AD0_i0_i1p2_i2);\n",
-      "    const double AD_dD02 = invdx2*(-2.0/3.0*AD0_i0_i1_i2m1 + (1.0/12.0)*AD0_i0_i1_i2m2 + (2.0/3.0)*AD0_i0_i1_i2p1 - 1.0/12.0*AD0_i0_i1_i2p2);\n",
-      "    /* \n",
-      "     * Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
-      "     */\n",
-      "    /*\n",
-      "     *  Original SymPy expression:\n",
-      "     *  \"out_gf[IDX4(AD_RHSD0GF, i0, i1, i2)] = -AevolParen_dD0 + 1.0*(-1.0*AD_dD01/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) + 1.0*AD_dD10/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11))*(ValenciavU1*alpha - betaU1)*sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) - 1.0*(1.0*AD_dD02/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11) - 1.0*AD_dD20/sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11))*(ValenciavU2*alpha - betaU2)*sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*gammaDD12**2 - gammaDD01**2*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - gammaDD02**2*gammaDD11)\"\n",
-      "     */\n",
-      "    const double tmp0 = sqrt(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*pow(gammaDD12, 2) - pow(gammaDD01, 2)*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - pow(gammaDD02, 2)*gammaDD11);\n",
-      "    const double tmp1 = 1.0/tmp0;\n",
-      "    const double tmp2 = 1.0*tmp0;\n",
-      "    out_gf[IDX4(AD_RHSD0GF, i0, i1, i2)] = -AevolParen_dD0 + tmp2*(-AD_dD01*tmp1 + AD_dD10*tmp1)*(ValenciavU1*alpha - betaU1) - tmp2*(AD_dD02*tmp1 - AD_dD20*tmp1)*(ValenciavU2*alpha - betaU2);\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gf\",\"Stilde_rhs0\"),rhs=Stilde_rhs[0]))\n",
-    "for i in range(DIM):\n",
-    "    print(BU[i])\n",
-    "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gf\",\"AD_rhsD0\"),rhs=AD_rhsD[0]))\n"
+    "#fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gf\",\"AD_rhsD0\"),rhs=AD_rhsD[0]))\n"
    ]
   },
   {
