--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -37,22 +37,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote to file \"ScalarWave_PlaneWave_InitialData.h\"\n",
-      "Wrote to file \"ScalarWave_RHSs.h\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
     "import finite_difference as fin\n",
+    "import loop as lp\n",
     "from outputC import *\n",
     "\n",
     "# Step 1: Import the ScalarWave.InitialData module. \n",
@@ -66,7 +58,7 @@
     "import ScalarWave.ScalarWave_RHSs as swrhs\n",
     "\n",
     "# Step 3: Enable SIMD\n",
-    "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
+    "par.set_parval_from_str(\"outputC::SIMD_enable\",False)\n",
     "\n",
     "# Step 4: Set the spatial dimension parameter \n",
     "#         to *FOUR* this time, and then read\n",
@@ -75,7 +67,7 @@
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
     "# Step 5: Set the finite differencing order to 10.\n",
-    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\",10)\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\",6)\n",
     "\n",
     "# Step 6: Call the InitialData_PlaneWave() function to set up\n",
     "#         monochromatic (single frequency/wavelength) scalar\n",
@@ -90,85 +82,29 @@
     "swrhs.ScalarWave_RHSs()\n",
     "\n",
     "# Step 8: Generate C code for the initial data,\n",
-    "#         output to a file named \"ScalarWave_PlaneWave_InitialData.h\".\n",
-    "fin.FD_outputC(\"ScalarWave_PlaneWave_InitialData.h\",\n",
-    "               [lhrh(lhs=gri.gfaccess(\"in_gfs\",\"uu\"),rhs=swid.uu_ID),\n",
-    "                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"vv\"),rhs=swid.vv_ID)])\n",
+    "#         output to a file named \"SENR/ScalarWave_InitialData.h\".\n",
+    "IDstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"in_gfs\",\"uu\"),rhs=swid.uu_ID),\n",
+    "                                          lhrh(lhs=gri.gfaccess(\"in_gfs\",\"vv\"),rhs=swid.vv_ID)])\n",
+    "with open(\"SENR/ScalarWave_InitialData.h\", \"w\") as file:\n",
+    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
+    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],[\"1\",\"1\",\"1\"],\n",
+    "                       [\"#pragma omp parallel for\",\"    const REAL xx2=xx[2][i2];\",\n",
+    "                        \"        const REAL xx1=xx[1][i1];\"],\"\",\n",
+    "                        \"const REAL xx0=xx[0][i0];\\n\"+IDstring))\n",
     "\n",
+    "#    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"Nxx[2]\",\"Nxx[1]\",\"Nxx[0]\"],\n",
+    "#                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",IDstring))\n",
     "# Step 9: Generate C code for scalarwave RHSs,\n",
     "#         output to a file named \"ScalarWave_RHSs.h\".\n",
-    "fin.FD_outputC(\"ScalarWave_RHSs.h\",\n",
-    "               [lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
-    "                lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing \"C_header_files-the_usual_suspects.h\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile \"ScalarWave/C_header_files-the_usual_suspects.h\"\n",
-    "#include \"stdio.h\"\n",
-    "#include \"stdlib.h\"\n",
-    "#include \"stdbool.h\"\n",
-    "#include \"math.h\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing \"ScalarWave/ScalarWave.c\"\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '\"ScalarWave/ScalarWave.c\"'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-dd5c9aef4e17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'writefile'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\"ScalarWave/ScalarWave.c\"'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n#include \"C_header_files-the_usual_suspects.h\"\\n\\n\\nint main(int argc,char *argv[]) {\\n#include \"parameter_file_funcs.h\"\\n#include \"ID_driver_funcs.h\"\\n#include \"Find_Time_Step.h\"\\n#include \"timestepping_funcs.h\"\\n\\n    // Read input parameters\\n    // Set up initial data\\n    // Find the time step\\n    // Step forward in time\\n    return 0;\\n}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/jup/lib/python3.6/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2165\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2166\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2167\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2168\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<decorator-gen-106>\u001b[0m in \u001b[0;36mwritefile\u001b[0;34m(self, line, cell)\u001b[0m\n",
-      "\u001b[0;32m~/jup/lib/python3.6/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/lib/python3.6/site-packages/IPython/core/magics/osm.py\u001b[0m in \u001b[0;36mwritefile\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    789\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    790\u001b[0m         \u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'a'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 791\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    792\u001b[0m             \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '\"ScalarWave/ScalarWave.c\"'"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile \"ScalarWave/ScalarWave.c\"\n",
-    "\n",
-    "#include \"C_header_files-the_usual_suspects.h\"\n",
-    "\n",
-    "\n",
-    "int main(int argc,char *argv[]) {\n",
-    "#include \"parameter_file_funcs.h\"\n",
-    "#include \"ID_driver_funcs.h\"\n",
-    "#include \"Find_Time_Step.h\"\n",
-    "#include \"timestepping_funcs.h\"\n",
-    "\n",
-    "    // Read input parameters\n",
-    "    // Set up initial data\n",
-    "    // Find the time step\n",
-    "    // Step forward in time\n",
-    "    return 0;\n",
-    "}"
+    "RHSstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
+    "                                           lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)])\n",
+    "with open(\"SENR/ScalarWave_RHSs.h\", \"w\") as file:\n",
+    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
+    "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
+    "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
+    "                                      \"const REAL invdx1 = 1.0/dxx[1];\\n\"+\n",
+    "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
+    "                                      \"#pragma omp parallel for\",\"\",\"\"],\"\",RHSstring))"
    ]
   },
   {
@@ -195,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
