A few tweaks to the new SENR

--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -92,10 +92,8 @@
     "                        \"        const REAL xx1=xx[1][i1];\"],\"\",\n",
     "                        \"const REAL xx0=xx[0][i0];\\n\"+IDstring))\n",
     "\n",
-    "#    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"Nxx[2]\",\"Nxx[1]\",\"Nxx[0]\"],\n",
-    "#                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",IDstring))\n",
     "# Step 9: Generate C code for scalarwave RHSs,\n",
-    "#         output to a file named \"ScalarWave_RHSs.h\".\n",
+    "#         output to a file named \"SENR/ScalarWave_RHSs.h\".\n",
     "RHSstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
     "                                           lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)])\n",
     "with open(\"SENR/ScalarWave_RHSs.h\", \"w\") as file:\n",
@@ -106,13 +104,6 @@
     "                                      \"const REAL invdx2 = 1.0/dxx[2];\\n\"+\n",
     "                                      \"#pragma omp parallel for\",\"\",\"\"],\"\",RHSstring))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
