Tutorial-Start_to_Finish-ScalarWave: Continue work.

--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -85,7 +85,7 @@
     "#         output to a file named \"SENR/ScalarWave_InitialData.h\".\n",
     "IDstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"in_gfs\",\"uu\"),rhs=swid.uu_ID),\n",
     "                                          lhrh(lhs=gri.gfaccess(\"in_gfs\",\"vv\"),rhs=swid.vv_ID)])\n",
-    "with open(\"SENR/ScalarWave_InitialData.h\", \"w\") as file:\n",
+    "with open(\"ScalarWave/ScalarWave_InitialData.h\", \"w\") as file:\n",
     "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
     "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],[\"1\",\"1\",\"1\"],\n",
     "                       [\"#pragma omp parallel for\",\"    const REAL xx2=xx[2][i2];\",\n",
@@ -96,7 +96,7 @@
     "#         output to a file named \"SENR/ScalarWave_RHSs.h\".\n",
     "RHSstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
     "                                           lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)])\n",
-    "with open(\"SENR/ScalarWave_RHSs.h\", \"w\") as file:\n",
+    "with open(\"ScalarWave/ScalarWave_RHSs.h\", \"w\") as file:\n",
     "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\n",
     "                       [\"NGHOSTS+Nxx[2]\",\"NGHOSTS+Nxx[1]\",\"NGHOSTS+Nxx[0]\"],\n",
     "                       [\"1\",\"1\",\"1\"],[\"const REAL invdx0 = 1.0/dxx[0];\\n\"+\n",
@@ -116,11 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile \"SENR/SENR.c\"\n",
+    "with open(\"ScalarWave/ScalarWave_Playground.c\", \"w\") as file:\n",
+    "    file.write(\"// Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
+    "    file.write(\"#define NGHOSTS \"+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2)+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ScalarWave/ScalarWave_Playground.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a ScalarWave/ScalarWave_Playground.c\n",
     "\n",
     "// Part P1: Import needed header files\n",
     "#include \"stdio.h\"\n",
@@ -180,6 +199,8 @@
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS[0]-NGHOSTS, Nxx_plus_2NGHOSTS[1]-NGHOSTS, Nxx_plus_2NGHOSTS[2]-NGHOSTS };\n",
     "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
     "      FACE_UPDATE(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
     "      FACE_UPDATE(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
@@ -192,11 +213,12 @@
     "  }\n",
     "}\n",
     "\n",
+    "// main() function for \n",
     "int main(int argc, const char *argv[]) {\n",
     "\n",
-    "  const int Nxx[3] = { 256, 256, 256 };\n",
-    "  //const int Nxx[3] = { 64, 64, 64 };\n",
-    "  //  const int Nxx[3] = { 128, 128, 128 };\n",
+    "  const int Nx0x1x2 = atoi(argv[0]);\n",
+    "  const int Nxx[3] = { Nx0x1x2, Nx0x1x2, Nx0x1x2 };\n",
+    "\n",
     "  const int NGHOSTS = 3;\n",
     "\n",
     "  const REAL xxmin[3] = {-10.,-10.,-10. };\n",
