--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "with open(\"ScalarWave/ScalarWave_Playground.c\", \"w\") as file:\n",
     "    file.write(\"// Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
-    "    file.write(\"#define NGHOSTS \"+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2)+\"\\n\")"
+    "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2))+\"\\n\")"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "}\n",
     "\n",
     "// Part P5: Declare the function to evaluate the scalar wave RHSs\n",
-    "void rhs_eval(const int Nxx[3],const int NGHOSTS,const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], const REAL *in_gfs, REAL *rhs_gfs) {\n",
+    "void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], const REAL *in_gfs, REAL *rhs_gfs) {\n",
     "#include \"ScalarWave_RHSs.h\"\n",
     "}\n",
     "\n",
@@ -193,7 +193,7 @@
     "// Part P7: Boundary condition driver routine: Apply BCs to all six\n",
     "//          boundary faces of the cube, filling in the innermost\n",
     "//          ghost zone first, and moving outward.\n",
-    "void apply_bcs(const int Nxx[3],const int NGHOSTS,const int Nxx_plus_2NGHOSTS[3],REAL *gfs) {\n",
+    "void apply_bcs(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *gfs) {\n",
     "  // First xmin:\n",
     "  for(int which_gf=0;which_gf<NUM_GFS;which_gf++) {\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
@@ -216,10 +216,14 @@
     "// main() function for \n",
     "int main(int argc, const char *argv[]) {\n",
     "\n",
+    "  if(argc != 2 || atoi(argv[1]) < NGHOSTS) {\n",
+    "      printf(\"Error: Expected one command-line argument: ./ScalarWave_Playground [Nx(=Ny=Nz)],\\n\");\n",
+    "      printf(\"where Nx is the number of grid points in the x,y, and z directions.\\n\");\n",
+    "      printf(\"Nx MUST BE larger than NGHOSTS (= %d)\\n\",NGHOSTS);\n",
+    "      exit(1);\n",
+    "  }\n",
     "  const int Nx0x1x2 = atoi(argv[0]);\n",
     "  const int Nxx[3] = { Nx0x1x2, Nx0x1x2, Nx0x1x2 };\n",
-    "\n",
-    "  const int NGHOSTS = 3;\n",
     "\n",
     "  const REAL xxmin[3] = {-10.,-10.,-10. };\n",
     "  const REAL xxmax[3] = { 10., 10., 10. };\n",
@@ -255,33 +259,33 @@
     "\n",
     "  for(int n=0;n<=Nt;n++) {\n",
     "    \n",
-    "    rhs_eval(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,dxx, evol_gfs, k1_gfs);\n",
+    "    rhs_eval(Nxx,Nxx_plus_2NGHOSTS,dxx, evol_gfs, k1_gfs);\n",
     "    for(int i=0;i<Nxx_plus_2NGHOSTS_tot*NUM_GFS;i++) {\n",
     "      k1_gfs[i] *= dt;\n",
     "      next_in_gfs[i] = evol_gfs[i] + k1_gfs[i]*0.5;\n",
     "    }\n",
-    "    apply_bcs(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
+    "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
     "\n",
-    "    rhs_eval(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k2_gfs);\n",
+    "    rhs_eval(Nxx,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k2_gfs);\n",
     "    for(int i=0;i<Nxx_plus_2NGHOSTS_tot*NUM_GFS;i++) {\n",
     "      k2_gfs[i] *= dt;\n",
     "      next_in_gfs[i] = evol_gfs[i] + k2_gfs[i]*0.5;\n",
     "    }\n",
-    "    apply_bcs(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
+    "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
     "\n",
-    "    rhs_eval(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k3_gfs);\n",
+    "    rhs_eval(Nxx,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k3_gfs);\n",
     "    for(int i=0;i<Nxx_plus_2NGHOSTS_tot*NUM_GFS;i++) {\n",
     "      k3_gfs[i] *= dt;\n",
     "      next_in_gfs[i] = evol_gfs[i] + k3_gfs[i];\n",
     "    }\n",
-    "    apply_bcs(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
+    "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,next_in_gfs);\n",
     "\n",
-    "    rhs_eval(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k4_gfs);\n",
+    "    rhs_eval(Nxx,Nxx_plus_2NGHOSTS,dxx, next_in_gfs, k4_gfs);\n",
     "    for(int i=0;i<Nxx_plus_2NGHOSTS_tot*NUM_GFS;i++) {\n",
     "      k4_gfs[i] *= dt;\n",
     "      evol_gfs[i] += (1.0/6.0)*(k1_gfs[i] + 2.0*k2_gfs[i] + 2.0*k3_gfs[i] + k4_gfs[i]);\n",
     "    }\n",
-    "    apply_bcs(Nxx,NGHOSTS,Nxx_plus_2NGHOSTS,evol_gfs);\n",
+    "    apply_bcs(Nxx,Nxx_plus_2NGHOSTS,evol_gfs);\n",
     "\n",
     "    \n",
     "    const int i0mid=Nxx_plus_2NGHOSTS[0]/2;\n",
