Tutorial-Start_to_Finish-ScalarWave: Fix up some of the description text and add to the main index

--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numerical Solution of the Scalar Wave Equation, in Cartesian Coordinates\n",
+    "# Start-to-Finish Example: Numerical Solution of the Scalar Wave Equation, in Cartesian Coordinates\n",
+    "\n",
+    "<font color='green'>**This module has been validated to converge at the expected order to the exact solution (see plot at bottom).**</font>\n",
     "\n",
     "### NRPy+ Source Code for this module: [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py); [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py)\n",
     "\n",
@@ -17,7 +19,7 @@
     "1. Evolve the system forward in time using RK4 time integration. At each RK4 substep, do the following:\n",
     "    1. <font color='green'>Evaluate scalar wave RHS expressions.</font>\n",
     "    1. Apply boundary conditions.\n",
-    "    1. Print status of the simulation."
+    "1. At the end of each iteration in time, output the relative error between numerical and exact solutions."
    ]
   },
   {
@@ -28,9 +30,7 @@
     "\n",
     "Let's pick up where we left off in the [previous module](Tutorial-ScalarWave.ipynb), interfacing with the ScalarWave/ module to generate \n",
     "* monochromatic (single-wavelength) plane wave scalar wave initial data, and\n",
-    "* the scalar wave equation RHSs at **10th** finite difference order in **3 spatial dimensions**,\n",
-    "\n",
-    "all with SIMD enabled:"
+    "* the scalar wave equation RHSs at **4th** finite difference order in **3 spatial dimensions**"
    ]
   },
   {
@@ -407,6 +407,7 @@
     "        # -> log10(data64) = log10(data48) + 4*log(64/48)\n",
     "        second_col64.append(float(second_col64_raw[i]) + 4*mp.log10(64./48.))\n",
     "\n",
+    "# https://matplotlib.org/gallery/text_labels_and_annotations/legend.html#sphx-glr-gallery-text-labels-and-annotations-legend-py        \n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "plt.title(\"Plot Demonstrating 4th-order Convergence\")\n",
@@ -417,15 +418,7 @@
     "ax.plot(first_col64, second_col64, 'k-', label='Nx = 64, mult by (64/48)^4')\n",
     "legend = ax.legend(loc='lower right', shadow=True, fontsize='x-large')\n",
     "legend.get_frame().set_facecolor('C1')\n",
-    "plt.show()\n",
-    "\n",
-    "# plt.title(\"Plot Demonstrating 4th-order Convergence\")\n",
-    "# plt.xlabel(\"time\")\n",
-    "# plt.ylabel(\"log_{10}[Relative error]\")\n",
-    "\n",
-    "# plt.plot(first_col48, second_col48, 'bo')\n",
-    "# plt.plot(first_col64, second_col64, 'ro')\n",
-    "# plt.show()"
+    "plt.show()"
    ]
   }
  ],
