Wrote the routine to fill in B from A.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -26,9 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-3d780ed8d0c7>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-3d780ed8d0c7>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    import Tutorial-GiRaFFE_Higher_Order as gho\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
@@ -44,13 +53,23 @@
     "# Step 1: Set the finite differencing order to 4.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
     "\n",
-    "thismodule = \"GiRaFFE_NRPy\"\n",
+    "# Step 1c: Call the MaxwellCartesian_Evol() function from within the\n",
+    "#          Maxwell/MaxwellCartesian_Evol.py module.\n",
+    "import Tutorial-GiRaFFE_Higher_Order as gho\n",
+    "gho.GiRaFFE_Higher_Order()\n",
     "\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
-    "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\",DIM=3)\n",
-    "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
+    "# Step 2: Register gridfunctions so they can be written to by NRPy.\n",
+    "#gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
+    "#betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
+    "#alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
+    "#ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\",DIM=3)\n",
+    "Stilde_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"Stilde_rhs\")\n",
+    "A_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"A_rhsD\")\n",
+    "psi6Phi = gri.register_gridfunctions(\"AUX\",\"psi6Phi\")\n",
+    "\n",
+    "# Step 3: Set the rhs gridfunctions to their variables \n",
+    "#         defined by GiRaFFE_Higher_Order().\n",
+    "\n",
     "\n",
     "# Step 5: Create directories for the thorn if they don't exist.\n",
     "!mkdir GiRaFFE_HO     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
@@ -70,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
     "# Step 2: Import the four metric\n",
     "gammaUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaUU\",\"sym01\")\n",
     "gammaDET = gri.register_gridfunctions(\"AUX\",\"gammaDET\")\n",
@@ -87,60 +107,61 @@
     "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammaDET)\n",
     "\n",
     "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
-    "BU = ixp.zerorank1()\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n",
     "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 10)\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_10.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_10.h\",[\\\n",
     "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 8)\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_8.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_8.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_6.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_6.h\",[\\\n",
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_4.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_4.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_2.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
-    "BU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_ddnD[k][j]\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_2.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_D.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
     "\n",
     "AD_dupD = ixp.declarerank2(\"AD_dupD\",\"nosym\")\n",
-    "BU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
+    "    BU[i] = 0\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dupD[k][j]\n",
-    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/B_from_A_2.h\",[\\\n",
+    "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_U.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
@@ -170,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile MaxwellEvol/src/MaxwellEvol.c\n",
+    "%%writefile GiRaFFE_HO/src/MaxwellEvol.c\n",
     "#include <math.h>\n",
     "#include <stdio.h>\n",
     "\n",
@@ -180,10 +201,95 @@
     "#include \"Symmetry.h\"\n",
     "\n",
     "#include \"NRPy_params.h\"\n",
+    "// Declare boundary condition FACE_UPDATE function,\n",
+    "// which fills in the ghost zones with successively\n",
+    "// lower order finite differencing\n",
+    "void FACE_UPDATE(const int ORDER, const int which_gf, \n",
+    "                 const int i0min, const int i0max, \n",
+    "                 const int i1min, const int i1max, \n",
+    "                 const int i2min, const int i2max, \n",
+    "                 const int FACEX0, const int FACEX1, const int FACEX2) {\n",
+    "  if(ORDER==8) {\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"FDorder8.h\"\n",
+    "    }\n",
+    "  }\n",
+    "  else if(ORDER==6) \n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"FDorder8.h\"\n",
+    "    }\n",
+    "  else if(ORDER==4) \n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"FDorder8.h\"\n",
+    "    }\n",
+    "  if(ORDER==2) \n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"FDorder8.h\"\n",
+    "    }\n",
+    "}\n",
     "\n",
     "void B_from_A(CCTK_ARGUMENTS) {\n",
-    "  \n",
-    "} "
+    "  const int MAXFACE = -1;\n",
+    "  const int NUL     = +0;\n",
+    "  const int MINFACE = +1;\n",
+    "  CCTK_INT ORDER;\n",
+    "  if (cctk_nghostzones[0]==4) {\n",
+    "    ORDER = 8;\n",
+    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
+    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
+    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
+    "          #include \"B_from_A_8.h\"\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "  if (cctk_nghostzones[0]==3) {\n",
+    "    ORDER =6;\n",
+    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
+    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
+    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
+    "          #include \"B_from_A_6.h\"\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "  if (cctk_nghostzones[0]==2) {\n",
+    "    ORDER = 4;\n",
+    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
+    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
+    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
+    "          #include \"B_from_A_4.h\"\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "  if (cctk_nghostzones[0]==1) {\n",
+    "    ORDER = 2;\n",
+    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
+    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
+    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
+    "          #include \"B_from_A_2.h\"\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "  int imin[3] = { cctk_nghostzones[0], cctk_nghostzones[1], cctk_nghostzones[2] };\n",
+    "  int imax[3] = { cctk_lsh[0]-cctk_nghostzones[0], cctk_lsh[1]-cctk_nghostzones[1], cctk_lsh[2]-cctk_nghostzones[2] };\n",
+    "  for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "    //   to reflect the newly-updated face extents.\n",
+    "    FACE_UPDATE(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "    FACE_UPDATE(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "\n",
+    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "    FACE_UPDATE(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "  }\n",
+    "} \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -203,7 +309,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile GiRaFFE_HO/interface.ccl"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +325,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile GiRaFFE_HO/param.ccl\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,7 +343,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile GiRaFFE_HO/schedule.ccl\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,7 +361,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile GiRaFFE_HO/src/make.code.defn\n"
+   ]
   }
  ],
  "metadata": {
