--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -201,95 +201,94 @@
     "#include \"Symmetry.h\"\n",
     "\n",
     "#include \"NRPy_params.h\"\n",
+    "\n",
+    "const int MAXFACE = -1;\n",
+    "const int NUL     = +0;\n",
+    "const int MINFACE = +1;\n",
+    "\n",
+    "\n",
     "// Declare boundary condition FACE_UPDATE function,\n",
     "// which fills in the ghost zones with successively\n",
     "// lower order finite differencing\n",
-    "void FACE_UPDATE(const int ORDER, const int which_gf, \n",
-    "                 const int i0min, const int i0max, \n",
-    "                 const int i1min, const int i1max, \n",
-    "                 const int i2min, const int i2max, \n",
-    "                 const int FACEX0, const int FACEX1, const int FACEX2) {\n",
+    "void AtoB(const int ORDER, \n",
+    "          const CCTK_REAL *Ax,const CCTK_REAL *Ay,const CCTK_REAL *Az,\n",
+    "          const CCTK_REAL *Bx,const CCTK_REAL *By,const CCTK_REAL *Bz,\n",
+    "          const int i0min, const int i0max, \n",
+    "          const int i1min, const int i1max, \n",
+    "          const int i2min, const int i2max, \n",
+    "          const int FACEX0, const int FACEX1, const int FACEX2) {\n",
     "  if(ORDER==8) {\n",
     "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"FDorder8.h\"\n",
+    "        #include \"B_from_A_8.h\"\n",
     "    }\n",
+    "  } else if(ORDER==6) {\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_6.h\"\n",
+    "    }\n",
+    "  } else if(ORDER==4) {\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_4.h\"\n",
+    "    }\n",
+    "  } else if(ORDER==2) {\n",
+    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "        #include \"B_from_A_2.h\"\n",
+    "    } \n",
+    "  } else if(ORDER==0) {\n",
+    "    if(FACEX0==MAXFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x0D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX0==MINFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x0U.h\"\n",
+    "        }\n",
+    "    } else if(FACEX1==MAXFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x1D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX1==MINFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x1U.h\"\n",
+    "        }\n",
+    "    } else if(FACEX2==MAXFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x2D.h\"\n",
+    "        }\n",
+    "    } else if(FACEX2==MINFACE) {\n",
+    "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
+    "            #include \"B_from_A_2x2U.h\"\n",
+    "        }\n",
+    "    } else {\n",
+    "        printf(\"ERROR. FACEX parameters not set properly.\\n\")\n",
+    "        exit(1);\n",
+    "    }\n",
+    "  } else {\n",
+    "    printf(\"ERROR. ORDER parameter not set properly.\\n\")\n",
+    "    exit(1);\n",
     "  }\n",
-    "  else if(ORDER==6) \n",
-    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"FDorder8.h\"\n",
-    "    }\n",
-    "  else if(ORDER==4) \n",
-    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"FDorder8.h\"\n",
-    "    }\n",
-    "  if(ORDER==2) \n",
-    "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"FDorder8.h\"\n",
-    "    }\n",
     "}\n",
     "\n",
-    "void B_from_A(CCTK_ARGUMENTS) {\n",
-    "  const int MAXFACE = -1;\n",
-    "  const int NUL     = +0;\n",
-    "  const int MINFACE = +1;\n",
-    "  CCTK_INT ORDER;\n",
-    "  if (cctk_nghostzones[0]==4) {\n",
-    "    ORDER = 8;\n",
-    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
-    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
-    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
-    "          #include \"B_from_A_8.h\"\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "  if (cctk_nghostzones[0]==3) {\n",
-    "    ORDER =6;\n",
-    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
-    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
-    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
-    "          #include \"B_from_A_6.h\"\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "  if (cctk_nghostzones[0]==2) {\n",
-    "    ORDER = 4;\n",
-    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
-    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
-    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
-    "          #include \"B_from_A_4.h\"\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "  if (cctk_nghostzones[0]==1) {\n",
-    "    ORDER = 2;\n",
-    "    for(int i2=cctk_nghostzones[2]; i2<cctk_lsh[2]-cctk_nghostzones[2]; i2++) {\n",
-    "      for(int i1=cctk_nghostzones[1]; i1<cctk_lsh[1]-cctk_nghostzones[1]; i1++) {\n",
-    "        for(int i0=cctk_nghostzones[0]; i0<cctk_lsh[0]-cctk_nghostzones[0]; i0++) {\n",
-    "          #include \"B_from_A_2.h\"\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "  int imin[3] = { cctk_nghostzones[0], cctk_nghostzones[1], cctk_nghostzones[2] };\n",
-    "  int imax[3] = { cctk_lsh[0]-cctk_nghostzones[0], cctk_lsh[1]-cctk_nghostzones[1], cctk_lsh[2]-cctk_nghostzones[2] };\n",
-    "  for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
+    "void driver_A_to_B(CCTK_ARGUMENTS) {\n",
+    "  const int *NG = cctk_nghostzones;\n",
+    "  const int *Nx = cctk_lsh;\n",
+    "  CCTK_INT ORDER = NG[0]*2;\n",
+    "  AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, NG[0],Nx[0]-NG[0],NG[1],Nx[1]-NG[1],NG[2],Nx[2]-NG[2]);\n",
+    "  int imin[3] = { NG[0], NG[1], NG[2] };\n",
+    "  int imax[3] = { Nx[0]-NG[0], Nx[1]-NG[1], Nx[2]-NG[2] };\n",
+    "  for(int which_gz = 0; which_gz < NG[0]; which_gz++) {\n",
     "      // After updating each face, adjust imin[] and imax[] \n",
-    "    //   to reflect the newly-updated face extents.\n",
-    "    FACE_UPDATE(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
-    "    FACE_UPDATE(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      ORDER -= which_gz*2;\n",
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
-    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
-    "    FACE_UPDATE(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
     "\n",
-    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
-    "    FACE_UPDATE(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
-    "  }\n",
-    "} \n",
-    "\n",
-    "\n"
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      AtoB(ORDER, Ax,Ay,Az,Bx,By,Bz, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "    }\n",
+    "}"
    ]
   },
   {
